--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -12,7 +12,10 @@
        color: #EEEEEE;
        padding: 60px 0;
    }
-
+   .footer .footer-left img{
+    height: 80px;
+    width: 80px;
+   }
    .footer-left , .footer-second, .footer-third{
        display: flex;
        flex-direction: column;
@@ -25,7 +28,12 @@
    .footer-last{
     align-self: flex-end;
     display: flex;
-    gap:20px
+    gap:20px;
+
+   }
+   .footer-last a{
+    text-decoration: none;
+    color: inherit;
    }
 @media only screen and (max-width: 480px) {
    .footer {
