--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -7,7 +7,7 @@
   margin-bottom: 20px;
 }
 .hero .hero-content {
-  width: 50%;
+  width: 49%;
 }
 .hero .hero-content h1 {
   font-family: "Poppins";
@@ -27,6 +27,11 @@
   line-height: 38px;
   color: #7d7d7d;
 }
+.hero .hero-content p span{
+  color:#717cff;
+  font-weight: 700;
+  font-size: 24px;
+}
 .hero-content .btn-contact {
   border: 2px solid #717cff;
   background: #717cff;
@@ -37,6 +42,10 @@
   border-radius: 11px;
   color: white;
   margin-top: 20px;
+}
+.hero-content .btn-contact a{
+  text-decoration: none;
+  color: inherit;
 }
 .btn-contact:hover {
   color: #717cff;
